tests/ui/issues/issue-18183.stderr
error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/issue-18183.rs:1:20
   |
LL | pub struct Foo<Bar=Bar>(Bar);
   |                    ^^^ cannot reference `Bar` before it is declared

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0128`.
